syntax = "proto3";
package cao_common;

option go_package = "github.com/caolo-game/cao-rt/cao_common_pb";

message Axial
{
  int32 q = 1;
  int32 r = 2;
}

message WorldPosition
{
  Axial room = 1;
  Axial pos = 2;
}

message Uuid
{
  bytes data = 1;
}

/// newtype wrapper around a json serialized object
message Json
{
    bytes value = 1;
}

